K8S/task-5/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: finbank-gateway
  namespace: finbank-new

spec:
  selector:
    istio: ingressgateway

  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP

    hosts:
    - "*"
