K8S/task-5/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: auth-routing
  namespace: finbank-new

spec:
  hosts:
  - "*"

  gateways:
  - finbank-gateway

  http:

  - match:

    - uri:
        prefix: /api/auth

    route:

    - destination:
        host: monolith.finbank-legacy.svc.cluster.local
        port:
          number: 8080
      weight: 90

    - destination:
        host: auth-service.finbank-new.svc.cluster.local
        port:
          number: 8081
      weight: 10

  - route:

    - destination:
        host: monolith.finbank-legacy.svc.cluster.local
        port:
          number: 8080
